--- a/src/main/resources/conf/mybatis/generator/mybatisGeneratorinit.properties
+++ b/src/main/resources/conf/mybatis/generator/mybatisGeneratorinit.properties
@@ -19,6 +19,6 @@ resources=src/main/resources
 #jdy
 jdbc_driver=com.mysql.jdbc.Driver
 #jdbc_url=jdbc:mysql://47.94.59.17:3308/cf_db_channel?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT&useSSL=false&amp;nullNamePatternMatchesAll=true
-jdbc_url=jdbc:mysql://127.0.0.1:3306/love_menu?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
+jdbc_url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
 jdbc_user=root
 jdbc_password=12345
