--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 		<version>2.2.5.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.standard</groupId>
-	<artifactId>standard.framework</artifactId>
+	<groupId>com.zhy</groupId>
+	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>menu</name>
 	<description>Demo project for Spring Boot</description>
@@ -113,21 +113,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
-		<!--<dependency>-->
-			<!--<groupId>io.springfox</groupId>-->
-			<!--<artifactId>springfox-swagger2</artifactId>-->
-			<!--<version>2.9.2</version>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>io.springfox</groupId>-->
-			<!--<artifactId>springfox-swagger-ui</artifactId>-->
-			<!--<version>2.9.2</version>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.apache.shiro</groupId>-->
-			<!--<artifactId>shiro-spring</artifactId>-->
-			<!--<version>1.4.0</version>-->
-		<!--</dependency>-->
 	</dependencies>
 
 	<build>
