--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.zhy</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>menu</name>
+	<name>zhy_demo</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
